--- a/wwwroot/teacher/application.html
+++ b/wwwroot/teacher/application.html
@@ -25,6 +25,16 @@
       </div>
     </nav>
 
+    <!-- Loading -->
+    <div class="loading-overlay" id="loading-overlay">
+      <img
+        class="loading"
+        src="../assets/icons/loading.gif"
+        alt="loading"
+        style="display: none"
+      />
+    </div>
+
     <!-- Form -->
     <div class="form-container">
       <h1 class="text-center">教師資格申請</h1>
