--- a/wwwroot/teacher/edit-course.html
+++ b/wwwroot/teacher/edit-course.html
@@ -25,6 +25,16 @@
       </div>
     </nav>
 
+    <!-- Loading -->
+    <div class="loading-overlay" id="loading-overlay">
+      <img
+        class="loading"
+        src="../assets/icons/loading.gif"
+        alt="loading"
+        style="display: none"
+      />
+    </div>
+
     <!-- Form -->
     <div class="course-form-container"></div>
     <!-- Footer -->
