--- a/wwwroot/user/profile.html
+++ b/wwwroot/user/profile.html
@@ -34,6 +34,16 @@
       </div>
     </nav>
 
+    <!-- Loading -->
+    <div class="loading-overlay" id="loading-overlay">
+      <img
+        class="loading"
+        src="../assets/icons/loading.gif"
+        alt="loading"
+        style="display: none"
+      />
+    </div>
+
     <!-- Form -->
     <div class="form-container">
       <h1 class="text-center">我的會員資料</h1>
