fix: user can't repeat submit teacher role application now.

--- a/wwwroot/application/form.html
+++ b/wwwroot/application/form.html
@@ -157,5 +157,6 @@
     src="../js/check-teacher-role-for-application.js"
   ></script>
   <script type="module" src="../js/check-user-authorize.js"></script>
+  <script type="module" src="../js/check-teacher-application-exist.js"></script>
   <script type="module" src="../js/teacher-application.js"></script>
 </html>
