feat: modify teacher application ux

--- a/wwwroot/admin/portal.html
+++ b/wwwroot/admin/portal.html
@@ -41,9 +41,9 @@
       <a href="../admin/teacher/applications.html" class="teacher-application"
         ><button type="button" class="btn btn-policy">教師資格申請單</button></a
       >
-      <a href="./course-category.html" class="course-category"
+      <!-- <a href="./course-category.html" class="course-category"
         ><button type="button" class="btn btn-policy">課程類別管理</button></a
-      >
+      > -->
       <a href="./dashboard.html" class="dashboard"
         ><button type="button" class="btn btn-policy">後台數據</button></a
       >
