--- a/wwwroot/application/form.html
+++ b/wwwroot/application/form.html
@@ -43,7 +43,7 @@
 
     <!-- Form -->
     <div class="form-container">
-      <h1 class="text-center">教師資格申請</h1>
+      <!-- <h1 class="text-center">教師資格申請</h1>
       <form id="teacher-application-form">
         <div class="form-group">
           <input
@@ -130,7 +130,7 @@
         <div class="form-group text-center">
           <button type="submit" class="btn btn-block apply">送出申請</button>
         </div>
-      </form>
+      </form> -->
     </div>
     <!-- Footer -->
     <footer class="footer text-center text-lg-start fixed-bottom">
