--- a/wwwroot/teacher/publish-course.html
+++ b/wwwroot/teacher/publish-course.html
@@ -58,13 +58,16 @@
           />
         </div>
         <div class="form-group">
-          <input
-            type="text"
+          <select
             class="form-control item"
             id="course-way"
-            placeholder="授課方式(實體/線上)"
+            name="course-way"
             required
-          />
+          >
+            <option value="" disabled selected>請選擇授課方式</option>
+            <option value="實體">實體</option>
+            <option value="線上">線上</option>
+          </select>
         </div>
         <div class="form-group">
           <input
