--- a/wwwroot/admin/dashboard.html
+++ b/wwwroot/admin/dashboard.html
@@ -80,6 +80,8 @@
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
   ></script>
+  <!-- Cart.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"></script>
   <!-- js file -->
   <script type="module" src="../js/check-admin-authorize.js"></script>
   <script type="module" src="../js/admin-dashboard.js"></script>
