--- a/wwwroot/admin/dashboard.html
+++ b/wwwroot/admin/dashboard.html
@@ -40,9 +40,6 @@
       </div>
       <div class="transaction-data-container"></div>
       <div class="course-data-container"></div>
-      <div class="other-data-container">
-        <p>其他資料：</p>
-      </div>
     </div>
 
     <!-- Footer -->
@@ -81,7 +78,11 @@
     src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
   ></script>
   <!-- Cart.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+  <script>
+    Chart.register(ChartDataLabels);
+  </script>
   <!-- js file -->
   <script type="module" src="../js/check-admin-authorize.js"></script>
   <script type="module" src="../js/admin-dashboard.js"></script>
