--- a/wwwroot/teacher/dashboard.html
+++ b/wwwroot/teacher/dashboard.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/form.css" />
-    <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/teacher-dashboard.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -77,6 +77,13 @@
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
   ></script>
+  <!-- Cart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+  <script>
+    Chart.register(ChartDataLabels);
+  </script>
+
   <!-- js file -->
   <script type="module" src="../js/check-teacher-authorize.js"></script>
   <script type="module" src="../js/teacher-dashboard.js"></script>
