feat: adjust all alert to sweetalert(better looking)

--- a/wwwroot/application/form.html
+++ b/wwwroot/application/form.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
       href="../assets/country-picker-flags/build/css/countrySelect.css"
     />
+    <!-- SeetAlert2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bulma/bulma.css"
+    />
     <!-- css files -->
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/teacher-application.css" />
@@ -160,6 +165,8 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+  <!-- Sweetalert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- js file -->
   <script
     type="module"
