feat: add countup animation in dashboard

--- a/wwwroot/teacher/dashboard.html
+++ b/wwwroot/teacher/dashboard.html
@@ -91,7 +91,13 @@
   </script>
   <!-- Sweetalert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- CountUp.js -->
+  <script src="https://cdn.bootcss.com/countup.js/1.9.3/countUp.js"></script>
+
   <!-- js file -->
   <script type="module" src="../js/check-teacher-authorize.js"></script>
   <script type="module" src="../js/teacher-dashboard.js"></script>
+
+  <!-- init CountUp -->
+  <script src="../js/countup.js"></script>
 </html>
