--- a/wwwroot/admin/dashboard.html
+++ b/wwwroot/admin/dashboard.html
@@ -83,7 +83,7 @@
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
   ></script>
-  <!-- Cart.js -->
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
   <script>
@@ -91,7 +91,14 @@
   </script>
   <!-- Sweetalert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <!-- CountUp.js -->
+  <script src="https://cdn.bootcss.com/countup.js/1.9.3/countUp.js"></script>
+
   <!-- js file -->
   <script type="module" src="../js/check-admin-authorize.js"></script>
   <script type="module" src="../js/admin-dashboard.js"></script>
+
+  <!-- init CountUp -->
+  <script src="../js/countup.js"></script>
 </html>
