fix: some input fields validator

--- a/wwwroot/course/search.html
+++ b/wwwroot/course/search.html
@@ -58,7 +58,8 @@
                 class="main-search-input"
                 type="text"
                 value=""
-                placeholder="輸入關鍵字..."
+                placeholder="滑雪..."
+                maxlength="50"
               />
             </div>
             <button class="main-search-button">搜尋</button>
