--- a/wwwroot/teacher/application.html
+++ b/wwwroot/teacher/application.html
@@ -51,6 +51,7 @@
             class="form-control item"
             id="name"
             placeholder="姓名"
+            maxlength="30"
             required
           />
         </div>
@@ -60,6 +61,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            maxlength="100"
             required
           />
         </div>
@@ -78,6 +80,7 @@
             class="form-control item"
             id="location"
             placeholder="所在地"
+            maxlength="20"
             required
           />
         </div>
@@ -86,6 +89,7 @@
             type="text"
             class="form-control item"
             id="language"
+            maxlength="20"
             placeholder="溝通語言"
           />
         </div>
@@ -95,6 +99,7 @@
             class="form-control item"
             id="category"
             placeholder="課程類別"
+            maxlength="20"
             required
           />
         </div>
@@ -104,6 +109,7 @@
             class="form-control item"
             id="experience"
             placeholder="教學經驗"
+            maxlength="50"
           />
         </div>
         <div class="form-group">
@@ -112,6 +118,7 @@
             class="form-control item"
             id="description"
             placeholder="個人特色"
+            maxlength="100"
             required
           ></textarea>
         </div>
