--- a/wwwroot/user/signin.html
+++ b/wwwroot/user/signin.html
@@ -49,6 +49,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            maxlength="100"
             required
           />
         </div>
@@ -58,6 +59,7 @@
             class="form-control item"
             id="password"
             placeholder="密碼"
+            maxlength="20"
             required
           />
         </div>
