--- a/wwwroot/user/signup.html
+++ b/wwwroot/user/signup.html
@@ -58,6 +58,7 @@
             class="form-control item"
             id="email"
             placeholder="電子信箱"
+            maxlength="100"
             required
           />
         </div>
@@ -67,6 +68,7 @@
             class="form-control item"
             id="password"
             placeholder="密碼"
+            maxlength="20"
             required
           />
         </div>
@@ -76,6 +78,7 @@
             class="form-control item"
             id="checkPassword"
             placeholder="確認密碼"
+            maxlength="20"
             required
           />
         </div>
