fix: add error page

--- a/wwwroot/error.html
+++ b/wwwroot/error.html
@@ -50,10 +50,14 @@
 
     <!-- Error -->
     <div class="error-container">
-      <p class="error-message">Oops!</p>
-      <p class="error-message">404 - Page not found！</p>
+      <p class="error-message">出錯囉！</p>
+      <p class="error-message">該網址找不到頁面</p>
+      <img class="error-icon" src="./assets/icons/error.png" alt="error" />
+      <br />
       <a href="/"
-        ><button type="button" class="btn btn-primary">回首頁</button></a
+        ><button type="button" class="btn btn-policy error-button">
+          回首頁
+        </button></a
       >
     </div>
 
