fix: adjust different role show different link

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,7 +27,7 @@
           ><img src="./assets/icons/Logo.png" alt="Logo"
         /></a>
         <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item">
+          <li class="nav-item teacher-application-link">
             <a
               class="nav-link mx-2 teacher-application-link"
               href="./application/form.html"
@@ -111,4 +111,5 @@
   <script src="js/index.js"></script>
   <script type="module" src="js/apply-to-become-teacher.js"></script>
   <script type="module" src="js/check-user-login-status.js"></script>
+  <script type="module" src="js/hide-become-teacher-link.js"></script>
 </html>
