--- a/wwwroot/user/portal.html
+++ b/wwwroot/user/portal.html
@@ -86,4 +86,5 @@
   <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/user-portal.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/hide-become-teacher-link.js"></script>
 </html>
