--- a/wwwroot/user/my-bookings.html
+++ b/wwwroot/user/my-bookings.html
@@ -74,4 +74,5 @@
   <script type="module" src="../js/check-user-authorize.js"></script>
   <script type="module" src="../js/my-bookings.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
+  <script type="module" src="../js/hide-become-teacher-link.js"></script>
 </html>
