fix: modify the action after review the teacher application

--- a/wwwroot/admin/teacher/applications.html
+++ b/wwwroot/admin/teacher/applications.html
@@ -32,6 +32,16 @@
       </div>
     </nav>
 
+    <!-- Loading -->
+    <div class="loading-overlay" id="loading-overlay">
+      <img
+        class="loading"
+        src="../../assets/icons/loading.gif"
+        alt="loading"
+        style="display: none"
+      />
+    </div>
+
     <!-- Table -->
     <div class="table-container"></div>
     <!-- Footer -->
