feat: modify the role and authentication

--- a/wwwroot/course/course-detail.html
+++ b/wwwroot/course/course-detail.html
@@ -81,4 +81,5 @@
   <script type="module" src="../js/course-detail.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
   <script type="module" src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/hide-become-teacher-link.js"></script>
 </html>
