--- a/wwwroot/course/search.html
+++ b/wwwroot/course/search.html
@@ -102,4 +102,5 @@
   <script type="module" src="../js/course-search.js"></script>
   <script type="module" src="../js/apply-to-become-teacher.js"></script>
   <script type="module" src="../js/check-user-login-status.js"></script>
+  <script type="module" src="../js/hide-become-teacher-link.js"></script>
 </html>
