--- a/wwwroot/teacher/offering-courses.html
+++ b/wwwroot/teacher/offering-courses.html
@@ -33,6 +33,16 @@
       </div>
     </nav>
 
+    <!-- Loading -->
+    <div class="loading-overlay" id="loading-overlay">
+      <img
+        class="loading"
+        src="../assets/icons/loading.gif"
+        alt="loading"
+        style="display: none"
+      />
+    </div>
+
     <!-- Table -->
     <div class="table-container"></div>
     <!-- Footer -->
